git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@555 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/survey/survey-result-price.html
+++ b/jhj-web-user/survey/survey-result-price.html
@@ -1,8 +1,8 @@
-<div data-page="survey-result-price-page" class="page" style="background-color:#E5E5E5!important;overflow:auto">
+<div data-page="survey-result-price-page" class="page" style="background-color:#FDEEEE!important;overflow:auto">
 	
 	<div class="page-content"style="margin:0;">
 		<div style="margin:0" class="list-block">
-			<ul style="margin-top:15px;background:#F8F8F8;">
+			<ul style="margin-top:15px;background:#FFFCE8;">
 				<li>
 					<div class="item-content">
 						<div class="item-inner" style="padding-top:0;padding-bottom:0;">
@@ -14,7 +14,7 @@
 		</div>
 		
 		<div style="margin:0" class="list-block">
-				<ul style="margin-top:15px;background:#F8F8F8;">
+				<ul style="margin-top:15px;background:#FFFCE8;">
 					<li>
 						<div class="item-content">
 							<div class="item-inner" style="padding-top:0;padding-bottom:0;">
@@ -41,7 +41,7 @@
 		
 		
 		<div style="margin:0" class="list-block">
-			<ul style="margin-top:15px;background:#F8F8F8;">
+			<ul style="margin-top:15px;background:#FFFCE8;">
 				<li>
 					<div class="item-content">
 						<div class="item-inner" style="padding-top:0;padding-bottom:0;">
@@ -61,7 +61,7 @@
 		</div>
 				
 		<div style="margin:0" class="list-block">
-			<ul style="margin-top:15px;background:#F8F8F8;">
+			<ul style="margin-top:15px;background:#FFFCE8;">
 				<li>
 					<div class="item-content">
 						<div class="item-inner" style="padding-top:0;padding-bottom:0;">
@@ -74,7 +74,7 @@
 		</div>
 		
 		<div style="margin:0" class="list-block">
-			<ul style="margin-top:15px;background:#F8F8F8;">
+			<ul style="margin-top:15px;background:#FFFCE8;">
 				<li>
 					<div class="item-content">
 						<div class="item-inner" style="padding-top:0;padding-bottom:0;">
