--- a/jhj-web-user/survey/survey-user.html
+++ b/jhj-web-user/survey/survey-user.html
@@ -1,19 +1,18 @@
 
 	<div data-page="survey-user-page" class="page"style="background-color:#FDEEEE!important;overflow:auto">
 	
-		<div style="margin:0" class="list-block">
-				<ul style="margin-top:15px;background:#fffce8;">
-					<li>
-						<div class="item-content">
-							<div class="item-inner" style="padding-top:0;padding-bottom:0;">
-								<div class="item-title">基本信息</div>
-								
-							</div>
-						</div>
-					</li>
-				<ul>
-		 </div>
 		
+		<div class="page-content"style="margin:0;">
+			<div class="ddjg-input" style="text-align:center">
+                <img src="img/icons/service-strat.png" />
+            </div>
+            <ul class="ddjg-xq-service">
+            	<li>立即填写信息</li>
+            	<li style="font-size:16px;">免费帮您定制一套专业的家政服务方案</li>
+          </ul>
+
+			
+		</div>
 	<form id="survey-user-form"  >
 		<div class="page-content"style="margin:0;">
 			<div style="margin: 0" class="list-block">
