git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@556 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -11,7 +11,16 @@
 <link rel="stylesheet" href="css/mobiscroll.custom-2.16.1.min.css">
 <link rel="stylesheet" href="css/my-app.css">
 
-
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "//hm.baidu.com/hm.js?a1deaad494a95d532bfed8013cce1c4a";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+	
+</script>
    
    
 </head>
@@ -112,12 +121,12 @@
 			</div>
 
 		</div>
-	<!-- <script type="text/javascript">
+	<script type="text/javascript">
 		//页面渲染完毕，隐藏百度商桥(垃圾广告)
 		window.onload = function (){
 			document.getElementById("qiao-wrap").style.display = "none";
 		}
-	</script> -->
+	</script> 
 	
 	<script type="text/javascript" src="js/framework7.min.js"></script>
 	
