--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -12,6 +12,17 @@
 <link rel="stylesheet" href="css/my-app.min.css?t=52fdad8d">
 
 
+<script>
+	var _hmt = _hmt || [];
+	(function() {
+	  var hm = document.createElement("script");
+	  hm.src = "//hm.baidu.com/hm.js?a1deaad494a95d532bfed8013cce1c4a";
+	  var s = document.getElementsByTagName("script")[0]; 
+	  s.parentNode.insertBefore(hm, s);
+	})();
+	
+</script>
+
 </head>
 <body>
 
@@ -109,13 +120,13 @@
 
 		</div>
 	
-	<!-- <script type="text/javascript">
+	<script type="text/javascript">
 		//页面渲染完毕，隐藏百度商桥(垃圾广告)
 		window.onload = function (){
 			document.getElementById("qiao-wrap").style.display = "none";
 		}
 	</script>
- -->
+ 
 	<script type="text/javascript" src="js/framework7.min.js"></script>
 	<script type="text/javascript" src="js/u-lib.min.js"></script>
 	<script type="text/javascript" src="js/u-main.min.js?t=806dffa2"></script>
