git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@561 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-form-zhongdiangong.html
+++ b/jhj-web-user/order/order-form-zhongdiangong.html
@@ -11,7 +11,7 @@
 			<input type="hidden" name="orderFrom" value="1">
 			<input type="hidden" name="serviceContent" value="">
 				
-			<input type="hidden" name="serviceHour" value="3">
+			<input type="hidden" name="serviceHour" value="">
 			<input type="hidden" id="serviceAddons" name ="serviceAddons" value="">
 			<input type="hidden" id="addrId" name="addrId" value="">
 
