git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@564 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/fiveservice/QuanNianDingZhi.html
+++ b/jhj-web-user/order/fiveservice/QuanNianDingZhi.html
@@ -32,6 +32,10 @@
 			<div class="jpbj-jpsh">服务内容</div>
 			<div class="jpbj-jpsh-xiantiao"></div>
 			<p class="jpbj-jpsh-mingxi" id="serviceContent">{{service_content}}</p>
+
+			<div class="jpbj-jpsh">服务说明</div>
+			<div class="jpbj-jpsh-xiantiao"></div>
+			<p class="jpbj-jpsh-mingxi">北京五环以内，可直接下单；五环以外，请联系我们核实服务情况</p>
 			
 			<input type="hidden" id="serviceTypeId" value="">
 			
