--- a/jhj-web-user/order/order-am-faqiyuyue.html
+++ b/jhj-web-user/order/order-am-faqiyuyue.html
@@ -32,6 +32,20 @@
 				        	</div>
 				        </div>
 				    </li>
+
+
+				    <li class="accordion-item">
+					 	<a href="#" class="item-content" style="color:#000;border-bottom:1px solid #ddd;">
+				        	<div class="item-inner">
+				         		 <div class="item-title" >服务说明</div>
+				        	</div>
+				        </a>
+				        <div class="accordion-item-content" style="height:100%!important;">
+				        	<div class="content-block">
+				         	  <p>北京五环以内，可直接下单；五环以外，请联系我们核实服务情况</p>
+				        	</div>
+				        </div>
+				    </li>
 			
 				</ul>
 			
