--- a/jhj-web-user/order/order-form-zhongdiangong.html
+++ b/jhj-web-user/order/order-form-zhongdiangong.html
@@ -55,6 +55,18 @@
 								</div>
 							</div>
 						</li>
+
+						<li>
+							<div class="item-content">
+								<div class="item-inner">
+									<div class="item-title label">服务说明:</div>
+									<div class="item-xx" >
+										<span>北京五环以内，可直接下单；五环以外，请联系我们核实服务情况</span>
+									</div>
+								</div>
+							</div>
+						</li>
+
 						
 						<li class="item-content">
 							<div class="item-inner">
