git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@573 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/order/order-form-zhongdiangong-pay.html
+++ b/jhj-web-user/order/order-form-zhongdiangong-pay.html
@@ -109,7 +109,7 @@
 							</label>
 						</li>
 						<!-- Another chekbox item -->
-						<li><label class="label-checkbox item-content" name="myPayTypeSelect"> 
+						<li id="select-wxpay" style="display:none"><label class="label-checkbox item-content" name="myPayTypeSelect"> 
 								
 								<div class="item-media"><img src="img/icons/weixin-2x.png"style="width:25px;margin-left:10px;"></div>
 								<div class="item-inner">
@@ -123,7 +123,7 @@
 
 
 
-						<li><label class="label-checkbox item-content" name="myPayTypeSelect"> 
+						<li id="select-alipay" style="display:none"><label class="label-checkbox item-content" name="myPayTypeSelect"> 
 								
 								<div class="item-media"><img src="img/icons/zhifubao.png"style="width:25px;margin-left:10px;"></div>
 								<div class="item-inner">
