--- a/jhj-web-user/order/order-view-2.html
+++ b/jhj-web-user/order/order-view-2.html
@@ -143,7 +143,7 @@
 
 						{{#js_compare "this.order_money !== 0 "}}					
 						<!-- Another chekbox item -->
-						<li id="select-alipay" style="display:none">
+						<li id="select-wxpay" style="display:none">
 							<label class="label-checkbox item-content" name="myPayTypeSelect" id="wxzhifuDiv"> 
 								<div class="item-media"><img src="img/icons/weixin.png"style="width:50px;"></div>
 								<div class="item-inner">
@@ -154,7 +154,8 @@
 							</label>
 						</li>
 						
-						<li id="select-alipay" style="display:none"><label class="label-checkbox item-content" name="myPayTypeSelect"> 
+						<li id="select-alipay" style="display:none">
+							<label class="label-checkbox item-content" name="myPayTypeSelect"> 
 								
 								<div class="item-media"><img src="img/icons/zhifubao.png"style="width:25px;margin-left:10px;"></div>
 								<div class="item-inner">
