git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@597 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/mine-add-addr.html
+++ b/jhj-web-user/user/mine-add-addr.html
@@ -19,11 +19,13 @@
 				<input type="hidden" id="latitude" name="latitude" value=""/>
 				<input type="hidden" id="city" name="city" value=""/>
 				<input type="hidden" id="uid" name="uid" value=""/>
+				
 				<ul>
 					<li>
 						<div class="searchbar-input-jhj" style="border-bottom:1px solid #B5B5B5;">
 							<!-- oninput -> execute our getcity() function to search and fill list-items -->
-							<input id="name" name="name" oninput="getBaiduAutoComplete()" placeholder="第一步	   请输入小区名" type="search-jhj" style="background:#fffce8;">
+							<input id="name" name="name" oninput="getBaiduAutoComplete()" maxlength="64"
+									placeholder="第一步	   请输入小区名" type="search-jhj" style="background:#fffce8;">
 
 						</div>
 
