--- a/jhj-web-user/order/order-am.html
+++ b/jhj-web-user/order/order-am.html
@@ -13,7 +13,7 @@
 			</div>		
 			<div id="order-am-part" style="display:none">
 				<div class="neirong">
-					<a href="order/order-am-faqiyuyue.html?service_type={id}" class="no-animation link"> 
+					<a href="order/order-am-faqiyuyue.html?service_type={id}" class="no-animation link"></a> 
 					{img_tag} <span style="margin-left:25.333333333333333333%;">{name}</span>
 					<div class="jieshao">{tips}</div>
 				</div>
