--- a/jhj-web-user/order/order-view-0.html
+++ b/jhj-web-user/order/order-view-0.html
@@ -208,7 +208,7 @@
 						
 						<li>
 							<label class="label-checkbox item-content" name="myPayTypeSelect"> 
-								<div class="item-media"><img src="img/icons/iconfont-qian.png"style="width:45px;"></div>
+								<div class="item-media"><img src="img/icons/iconfont-qian.png"style="width:25px;margin-left:10px;"></div>
 								<div class="item-inner">
 									<div class="item-title"style="margin-left:-15px;">现金支付</div>
 									<!-- 新增支付方式 ，现金支付 -->
