git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@683 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/charge/mine-charge-way.html
+++ b/jhj-web-user/user/charge/mine-charge-way.html
@@ -15,11 +15,20 @@
 							</div>
 						</div>
 					</li>
-
 					<li>
 						<div class="item-content">
 							<div class="item-inner">
 								<div class="item-title label">充值金额:</div>
+								<div class="item-xx">
+									<span id="card_pay_view"></span>元
+								</div>
+							</div>
+						</div>
+					</li>
+					<li>
+						<div class="item-content">
+							<div class="item-inner">
+								<div class="item-title label">赠送金额:</div>
 								<div class="item-xx">
 									<span id="card_pay_view"></span>元
 								</div>
