--- a/jhj-web-user/user/charge/mine-charge-way.html
+++ b/jhj-web-user/user/charge/mine-charge-way.html
@@ -25,12 +25,12 @@
 							</div>
 						</div>
 					</li>
-					<li>
+					<li class="pay-li">
 						<div class="item-content">
 							<div class="item-inner">
 								<div class="item-title label">赠送金额:</div>
 								<div class="item-xx">
-									<span id="card_pay_view"></span>元
+									<span id="send-money"></span>元
 								</div>
 							</div>
 						</div>
