--- a/jhj-web-user/user/charge/mine-charge-list.html
+++ b/jhj-web-user/user/charge/mine-charge-list.html
@@ -7,32 +7,20 @@
 		<!-- 1f -->
 			<img src="img/minecharge1.jpg" style="width:100%;margin-top:10px;" alt="">
 			<div class="list-block chongzhi-qingchu"style="margin:25px auto;color:#999;">
+                {{#each data}}
                 <ul class="minecharge">
-                <!-- {{#each data}} -->
                   <li class="minecharge-0">
-                  	<p>￥500</p>
-                  	<p>充值送元</p>
+                  	 <input type="hidden" class="card_id charge_money"  value="{{id}}">
+                  	<p>￥{{card_pay}}</p>
+                  	<p>充值送{{send_money}}元</p>
                   	<a href="#" class="charge-way">充值</a>
+                  	<input type="hidden" class="card_pay" id="card_pay" value="{{card_pay}}">
+                  	<input type="hidden" class="send_money" id="send_money" value="{{send_money}}">
                   </li>
-                  <li class="minecharge-1">
-                  	<p>￥1000</p>
-                  	<p>充值送元</p>
-                  	<a href="#">充值</a>
-                  </li>
-                  <li class="minecharge-2">
-                  	<p>￥2000</p>
-                  	<p>充值送元</p>
-                  	<a href="#">充值</a>
-                  </li>
-                  <li class="minecharge-3">
-                  	<p>￥5000</p>
-                  	<p>充值送元</p>
-                  	<a href="#">充值</a>
-                  </li>
-                  <!-- {{/each}} -->
                 </ul>
+                 {{/each}}
               </div>
-              <p style="width:98%;margin-left:1%;clear:both;color:#666;margin-top:"><b style="font-weight:bold;color:#333;">充值说明：</b>用户提前退卡返现，不享受赠送金额的优惠。实际返现金额为卡内余额扣减赠送金额后的部分，余额不足抵扣赠送金额时，不予返现。</p>
+              <p style="width:98%;margin-left:1%;clear:both;color:#666;padding-top:30px;font-size:16px;"><b style="font-weight:bold;color:#333;font-size:16px;">充值说明：</b>用户提前退卡返现，不享受赠送金额的优惠。实际返现金额为卡内余额扣减赠送金额后的部分，余额不足抵扣赠送金额时，不予返现。</p>
 		</div>
 	</div>
 </div>							
