--- a/jhj-web-user/user/charge/mine-charge-list.html
+++ b/jhj-web-user/user/charge/mine-charge-list.html
@@ -2,7 +2,7 @@
 <!-- Top Navbar-->
 <div class="pages">
 	<!-- Page, data-page contains page name-->
-	<div data-page="mine-charge-list" class="page"style="overflow:auto;background:#FDEEEE;">
+	<div data-page="mine-charge-list" class="page"style="background:#FDEEEE;">
 		<div class="page-content"style="margin-top:5px;height:auto;">
 		<!-- 1f -->
 			<img src="img/minecharge1.jpg" style="width:100%;margin-top:10px;" alt="">
