--- a/jhj-web-user/user/aboutus.html
+++ b/jhj-web-user/user/aboutus.html
@@ -8,11 +8,14 @@
       <div class="card-content">
         <div class="card-content-inner">
           <p style="color:#EF7C00;margin:0;font-weight:blod;">1.公司介绍</p>
-          <p style="margin:0;">叮当到家是以“家庭服务定制化”为核心，以家政服务为入口，满足家庭服务个性化需求的O2O创新型企业。</p>
-          <p style="margin:0;">公司在业内首个实施，以通过“移动平台+主云门店系统+家庭助理团队”三位一体的三角业务模式，为中高端家庭提供“金牌保洁、厨娘烧饭、深度养护、贴心家事”服务，为中小型企业提供“企业保洁、企业团餐”服务，并在此基础上提供深层定制化服务。</p>
+          <p style="margin:0;">叮当到家是以提供家务包年的服务形式，通过个性化家庭服务定制平台，以一键定制、全年即可享受按时按需的包年服务，坐享服务到家，让家庭远离家务。</p>
+          <p style="margin:0;">公司在业内首个实施，以通过“移动平台+主云门店系统+家庭助理团队”三位一体的三角业务模式，为中高端家庭用户提供品类齐全的服务，包含家政服务包、贴心家事包、超值免费包，基本涵盖各项家庭需求，是家庭专属的家务助手。</p>
+          <p style="margin:0;">公司对服务人员进行持久的服务素质培养，通过礼仪培训、技能培训等，保障服务人员具有较高的行业服务水准。</p>
           <p style="margin:0;">与现有家政相比，整体上具有明显差异化优势：</p>
-          <p style="margin:0;">变被动式服务为主动式服务</p>
-          <p style="margin:0;">变单一式服务为团队式服务</p>
+          <p style="margin:0;">变被动服务为主动服务</p>
+          <p style="margin:0;">变零散服务为包年服务</p>
+          <p style="margin:0;">变单人服务为团队服务</p>
+          <p style="margin:0;">变普通服务为高逼格服务</p>
           <p style="margin:0;border-bottom:1px solid #999;">变普通式服务为高逼格服务</p>
 
 
