--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -31,7 +31,7 @@
           var vds = document.createElement('script');
           vds.type='text/javascript';
           vds.async = true;
-          vds.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'dn-growing.qbox.me/vds.js';
+          vds.src = ('https:' == document.location.protocol ? 'https://www.jia-he-jia.com/u' : 'http://www.jia-he-jia.com/u') + 'dn-growing.qbox.me/vds.js';
           var s = document.getElementsByTagName('script')[0];
           s.parentNode.insertBefore(vds, s);
         })();
