git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@837 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/user/coupon/mine-coupon-list.html
+++ b/jhj-web-user/user/coupon/mine-coupon-list.html
@@ -45,14 +45,14 @@
 				        	
 				        	<ul class="yhq-duihuanma1">
 				        		<li id="introduction">{{introduction}}</li>
-				        		<li>{{use_condition_descr}}</li>
+				        		<!-- <li>{{coupons_type_desc}}</li> -->
 				        		<li>有效期至:{{to_date_str}}</li>
 				        		<li>消费满{{max_value}}元可用</li>
 				        		<input type="hidden" name="user_coupon_id" id="user_coupon_id" value="{{id}}"/>
 				        		<input type="hidden" name="service_type" id="service_type" value="{{service_type}}"/>
 				        		<input type="hidden" name="max_value" id="max_value" value="{{max_value}}"/>
 				        		<input type="hidden" name="user_coupon_value" id="user_coupon_value" value="{{value}}"/>
-				        		<input type="hidden" name="use_condition" id="use_condition" value="{{use_condition}}"/>
+				        		<input type="hidden" name="coupons_type_id" id="coupons_type_id" value="{{coupons_type_id}}"/>
 				        	</ul>
 				        	
 				        </div>
