-- 微信版-金牌保洁功能流程增加（未完成）

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -33,7 +33,7 @@
 								<p>家政保洁服务</p>
 							</div>
 							<div class="mincircle mincircle1">
-								<a href="order-jinpai.html" onclick="orderLink('order/fiveservice/jinpaibaojie.html', 23)">
+								<a href="order/order-hour-intro.html">
 									<div class="mincircle-one">
 										<p>金牌保洁</p>
 										<p>首单立减30元</p>
