-- 删除日期选择控件，目前已经不用

--- a/jhj-web-user/order/order-hour-form.html
+++ b/jhj-web-user/order/order-hour-form.html
@@ -1,81 +1,82 @@
-
-<div data-page="order-hour-form" class="page">
-	<div id="indexPageContentDiv" class="page-content">
-		<form id="orderHour-Form" class="store-data">
-			<input type="hidden" id="userId" name="userId" value="">
-			<input type="hidden" name="serviceType" id="serviceType" value="">
-			<input type="hidden" name="orderFrom" value="1">
-			<input type="hidden" name="serviceContent" value="">
-				
-			<input type="hidden" name="serviceHour" value="">
-			<input type="hidden" id="serviceAddons" name ="serviceAddons" value="">
-			<input type="hidden" id="addrId" name="addrId" value="">
-			
-			<div class="beijing-index">
-				<div class="order-xiadan">
-					<ul class="xiadan">
-						<li>服务类型：</li>
-						<li>日常保洁</li>
-					</ul>
-					<a href="user/mine-addr-list.html" class="item-link" id="addrSelect">
+<div class="pages">
+	<div data-page="order-hour-form" class="page">
+		<div id="indexPageContentDiv" class="page-content">
+			<form id="orderHour-Form" class="store-data">
+				<input type="hidden" id="userId" name="userId" value="">
+				<input type="hidden" name="serviceType" id="serviceType" value="23">
+				<input type="hidden" name="orderFrom" value="1">
+				<input type="hidden" name="serviceContent" value="">
+				<input type="hidden" name="serviceHour" value="3">
+				<input type="hidden" id="serviceAddons" name="serviceAddons" value="">
+				<input type="hidden" id="addrId" name="addrId" value="">
+				<div class="beijing-index">
+					<div class="order-xiadan">
 						<ul class="xiadan">
-							<li>服务地址：</li>
-							<li id="addrName">汉荣家园2号楼1607</li>
+							<li>服务类型：</li>
+							<li>日常保洁</li>
 						</ul>
-					</a>
-					<ul class="xiadan">
-						<li>服务人员数量：</li>
-						<li>1位服务人员</li>
-					</ul>
-					<ul class="xiadan">
-						<li>服务时长：</li>
-						<li>3小时</li>
-					</ul>
-					<ul class="xiadan">
-						<li>服务时间：</li>
-						<li>2016年9月26日（周三）14:00</li>
-					</ul>
-					<ul class="xiadan">
-						<li>费用明细：</li>
-						<li>149</li>
-					</ul>
-				</div>
-				<div class="order-xiadan">
-					<ul class="xiadan1">
-						<li>
-							<img src="img/xiadan/dingdanjine.png" alt="">
-						</li>
-						<li>订单金额</li>
-						<li>149元</li>
-					</ul>
-					<ul class="xiadan1">
-						<li>
-							<img src="img/xiadan/youhuiquan.png" alt="">
-						</li>
-						<li>优惠券</li>
-						<li>一张可用</li>
-					</ul>
-					<ul class="xiadan1" style="border: 0;">
-						<li>
-							<img src="img/xiadan/liuyan.png" alt="">
-						</li>
-						<li>留言</li>
-						<li>
-							<textarea name="" id="" class="tarea" placeholder="嘱咐服务员一句话"></textarea>
-						</li>
-					</ul>
-				</div>
-				<div class="order-xiadan">
-					<ul class="xiadan2">
-						<li class="special-color3">129元</li>
-					</ul>
-					<ul class="xiadan3">
-						<a href="order-pay.html">
-							<li>确认下单</li>
+						<a href="user/mine-addr-list.html" class="item-link" id="addrSelect">
+							<ul class="xiadan">
+								<li>服务地址：</li>
+								<li>
+									<input type="text" id="addrName" value="请选择服务地址." readonly="true"/>
+								</li>
+							</ul>
 						</a>
-					</ul>
+						<ul class="xiadan">
+							<li>服务人员数量：</li>
+							<li>1位服务人员</li>
+						</ul>
+						<ul class="xiadan">
+							<li>服务时长：</li>
+							<li>3小时</li>
+						</ul>
+						<ul class="xiadan">
+							<li>服务时间：</li>
+							<li>2016年9月26日（周三）14:00</li>
+						</ul>
+						<ul class="xiadan">
+							<li>费用明细：</li>
+							<li>149</li>
+						</ul>
+					</div>
+					<div class="order-xiadan">
+						<ul class="xiadan1">
+							<li>
+								<img src="img/xiadan/dingdanjine.png" alt="">
+							</li>
+							<li>订单金额</li>
+							<li>149元</li>
+						</ul>
+						<ul class="xiadan1">
+							<li>
+								<img src="img/xiadan/youhuiquan.png" alt="">
+							</li>
+							<li>优惠券</li>
+							<li>一张可用</li>
+						</ul>
+						<ul class="xiadan1" style="border: 0;">
+							<li>
+								<img src="img/xiadan/liuyan.png" alt="">
+							</li>
+							<li>留言</li>
+							<li>
+								<textarea name="" id="" class="tarea" placeholder="嘱咐服务员一句话"></textarea>
+							</li>
+						</ul>
+					</div>
+					<div class="order-xiadan">
+						<ul class="xiadan2">
+							<li class="special-color3">129元</li>
+						</ul>
+						<ul class="xiadan3">
+							<a href="order-pay.html">
+								<li>确认下单</li>
+							</a>
+						</ul>
+					</div>
 				</div>
-			</div>
-		</form>
+			</form>
+		</div>
 	</div>
 </div>
