--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -183,10 +183,6 @@
 	
 	<!-- 时间戳类库 -->
 	<script type="text/javascript" src="js/lib/moment-with-locales.min.js"></script>
-	<!-- 服务时间选择类库 -->
-	<script type="text/javascript" src="js/lib/appframework.min.js"></script>
-	<script type="text/javascript" src="js/lib/mobiscroll.custom-2.16.1.min.js"></script>
-
 
 	<!-- Path to your app js-->
 	<script type="text/javascript" src="js/main.js"></script>
@@ -195,10 +191,7 @@
 	<script type="text/javascript" src="js/utils.js"></script>
 	
 	<script type="text/javascript" src="js/index.js"></script>
-	<!-- 时间选择js-->
-	<script type="text/javascript" src="js/service-date-select.js"></script>
-	<script type="text/javascript" src="js/cook-date-select.js"></script>
-			
+
  	<!-- 用户地址列表显示-->
 	<script type="text/javascript" src="js/user/mine.js"></script>  
 	<script type="text/javascript" src="js/user/mine-addr-list.js"></script>  
@@ -213,20 +206,24 @@
 	<!-- 用户添加地址 -->
 	<script type="text/javascript"  src="js/user/mine-add-addrs.js"></script>  
 	
-	<!-- 钟点工提交订单页面 js -->	
-	<script type="text/javascript" src="js/order/order-form-zhongdiangong.js"></script>
-	<!-- 钟点工支付页面 -->
-	<script type="text/javascript" src="js/order/order-form-zhongdiangong-pay.js"></script>
+	<!-- 金牌保洁 -->	
+	<script type="text/javascript" src="js/order/order-hour-form.js"></script>
+	<script type="text/javascript" src="js/order/order-view-0.js"></script>
 	
+	<!-- 深度保洁附加服务选择 -->
+	<script type="text/javascript"  src="js/order/shendubaojie/order-list-shendubaojiezl.js"></script>  
+	<script type="text/javascript"  src="js/order/shendubaojie/order-list-shendubaojie-yuyue.js"></script>  
+	<script type="text/javascript"  src="js/order/shendubaojie/order-list-shendubaojie-result.js"></script>  
+	<script type="text/javascript"  src="js/order/shendubaojie/order-view-1.js"></script>  
+	
+	
+	<!-- 支付成功 -->	
+	<script type="text/javascript" src="js/order/order-pay-success.js"></script>
+
 	<!-- 用户版，当前订单列表 -->
 	<script type="text/javascript" src="js/order/order-cal.js"></script>
 	<!-- 用户版，当前订单列表 -->
 	<script type="text/javascript" src="js/order/order-hour-now-list.js"></script>
-
-	<!-- 钟点工-订单详情 -->
-	<script type="text/javascript" src="js/order/order-view-0.js"></script>
-
-	<script type="text/javascript" src="js/order/order-pay-success.js"></script>
 
 	<!-- 用户兑换优惠券 -->
 	<script type="text/javascript"  src="js/user/mine-coupon-list.js"></script>  
@@ -234,18 +231,6 @@
 	<script type="text/javascript"  src="js/user/mine-charge-list.js"></script>  
 	<script type="text/javascript"  src="js/user/mine-charge-way.js"></script>  
 	<script type="text/javascript"  src="js/user/mine-charge-pay-success.js"></script> 
-
-	<!-- 深度保洁附加服务选择 -->
-	<script type="text/javascript"  src="js/order/shendubaojie/order-list-shendubaojiezl.js"></script>  
-	<script type="text/javascript"  src="js/order/shendubaojie/order-list-shendubaojie-yuyue.js"></script>  
-	<script type="text/javascript"  src="js/order/shendubaojie/order-list-shendubaojie-result.js"></script>  
-	<script type="text/javascript"  src="js/order/shendubaojie/order-view-1.js"></script>  
-	       
-    <!-- 历史订单录入 -->
-    <script type="text/javascript" src="js/order/history/historyUser.js"></script>
-    <script type="text/javascript" src="js/order/history/historyZhongdiangong.js"></script>
-    <script type="text/javascript" src="js/order/history/historyAm.js"></script>
-    <script type="text/javascript" src="js/order/history/order-jinpai.js"></script>
     
     <!-- 2015-12-22 14:46:08 问卷调查 -->
     <script type="text/javascript" src="js/survey/survey-user.js"></script>
