-- 金牌保洁下单 选择地址功能完成

--- a/jhj-web-user/order/order-hour-form.html
+++ b/jhj-web-user/order/order-hour-form.html
@@ -18,9 +18,7 @@
 						<a href="user/mine-addr-list.html" class="item-link" id="addrSelect">
 							<ul class="xiadan">
 								<li>服务地址：</li>
-								<li>
-									<input type="text" id="addrName" value="请选择服务地址." readonly="true"/>
-								</li>
+								<li id="orderHourAddrName">请选择服务地址.</li>
 							</ul>
 						</a>
 						<ul class="xiadan">
