-- 首页修正  -- 金牌保洁下单页面流程修改

--- a/jhj-web-user/html/index.html
+++ b/jhj-web-user/html/index.html
@@ -165,7 +165,7 @@
 			        </a>
 			        			        
 			        <a href="#" id="toolbar-huodong" onclick="toolBarHref('huodong-list.html', 'toolbar-huodong')" class="no-animation link" style="color:#000;">
-			            <i class="icon toolbar-icon-zhuli"></i>
+			            <i class="icon toolbar-icon-chongzhi"></i>
 			            <span class="tabbar-label">充值</span>
 			        </a>
 			        
