--- a/jhj-web-user/order/order-hour-intro.html
+++ b/jhj-web-user/order/order-hour-intro.html
@@ -3,7 +3,7 @@
 		<img src="img/jinpaibaojie/banner.png" alt="" class="all-img">
 		<div class="beijing-index">
 			<div class="shendu-bx">
-				<a href="order/order-hour-form.html">
+				<a href="order/order-hour-choose.html">
 					<div class="all-button">立即预约</div>
 				</a>
 				<div class="shendu-bx-xd">
