-- 充值页面链接

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -164,7 +164,7 @@
 			            <span class="tabbar-label">订单</span>
 			        </a>
 			        			        
-			        <a href="#" id="toolbar-huodong" onclick="toolBarHref('user/mine-charge-list.html', 'toolbar-huodong')" class="no-animation link" style="color:#000;">
+			        <a href="#" id="toolbar-huodong" onclick="toolBarHref('user/charge/mine-charge-list.html', 'toolbar-huodong')" class="no-animation link" style="color:#000;">
 			            <i class="icon toolbar-icon-zhuli"></i>
 			            <span class="tabbar-label">充值</span>
 			        </a>
