--- a/jhj-web-user/order/order-hour-intro.html
+++ b/jhj-web-user/order/order-hour-intro.html
@@ -17,7 +17,7 @@
 						<li>199元/3小时</li>
 						<li>149元/3小时</li>
 					</ul>
-					<div class="shendu-bx-xd2">充值立享更多优惠&nbsp;》</div>
+					<div class="shendu-bx-xd2"><a href="user/charge/mine-charge-list.html">充值立享更多优惠&nbsp;》</a></div>
 				</div>
 			</div>
 			<div class="shendu-bx">
