--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -6,50 +6,50 @@
 				<div id="indexPageContentDiv" class="page-content">
 					<div class="beijing-index">
 						<div class="rilikongjian order-my">
-							<img src="../img/order-my/my-1.png" alt="" class="all-img3">
+							<img src="img/order-my/my-1.png" alt="" class="all-img3">
 							<p>{{mobile}}</p>
 						</div>
 						<div class="order-my1">
 							<ul>
-								<li><img src="../img/order-my/my-2.png" alt=""></li>
+								<li><img src="img/order-my/my-2.png" alt=""></li>
 								<li>账户余额</li>
 								<li>{{rest_money_span}}</li>
 							</ul>
 							<ul id="mine-coupons">
-								<li><img src="../img/order-my/my-3.png" alt=""></li>
+								<li><img src="img/order-my/my-3.png" alt=""></li>
 								<li>优惠券</li>
 								<li>{{total_coupon_span}}</li>
 							</ul>
 							
 							<ul>
-								<li><img src="../img/order-my/my-4.png" alt=""></li>
+								<li><img src="img/order-my/my-4.png" alt=""></li>
 								<li>会员级别</li>
 								<li>普通会员</li>
 							</ul>
 						</div>
 						<div class="order-my2">
 							<ul id="mine-about-us">
-								<li><img src="../img/order-my/my-5.png" alt=""></li>
+								<li><img src="img/order-my/my-5.png" alt=""></li>
 								<li>关于我们</li>
 								<li>〉</li>
 							</ul>
 							<ul id="mine-issue">
-								<li><img src="../img/order-my/my-6.png" alt=""></li>
+								<li><img src="img/order-my/my-6.png" alt=""></li>
 								<li>常见问题</li>
 								<li>〉</li>
 							</ul>
 							<ul id="mine-addr-manager">
-								<li><img src="../img/order-my/my-7.png" alt=""></li>
+								<li><img src="img/order-my/my-7.png" alt=""></li>
 								<li>地址管理</li>
 								<li>〉</li>
 							</ul>
 							<ul id="mine-agreement">
-								<li><img src="../img/order-my/my-8.png" alt=""></li>
+								<li><img src="img/order-my/my-8.png" alt=""></li>
 								<li>用户协议</li>
 								<li>〉</li>
 							</ul>
 							<ul style="border:0;">
-								<li><img src="../img/order-my/my-9.png" alt=""></li>
+								<li><img src="img/order-my/my-9.png" alt=""></li>
 								<li>联系客服</li>
 								<li>〉</li>
 							</ul>
