---支付宝支付

--- a/jhj-web-user/html/order-pay.html
+++ b/jhj-web-user/html/order-pay.html
@@ -47,9 +47,16 @@
 									</li>
 									<li style="width:30%;"><img src="../img/dingdan-pay/dingdan-pay2.png" alt=""></li>
 								</ul>
-								<ul class="xiadan11" style="border:0;">
+
+								<ul class="xiadan11">
 									<li><img src="../img/dingdan-pay/weixin-pay.png" alt=""></li>
 									<li>微信支付</li>
+									<li><img src="../img/dingdan-pay/dingdan-pay1.png" alt=""></li>
+								</ul>
+
+								<ul class="xiadan11" style="border:0;">
+									<li><img src="../img/dingdan-pay/zhifubao-pay.png" alt=""></li>
+									<li>支付宝支付</li>
 									<li><img src="../img/dingdan-pay/dingdan-pay1.png" alt=""></li>
 								</ul>
 							</div>
