--- a/jhj-web-user/user/faq.html
+++ b/jhj-web-user/user/faq.html
@@ -1,70 +1,62 @@
-<div class="pages">
-	
-	<!-- Page, data-page contains page name-->
-	<div data-page="fag" class="page" style="background:#FDEEEE;overflow:auto;">
-  <div class="page-content">
-	<!-- <div data-page="fag"  class="card"> -->
-      <div class="card-header" style="font-size:22px;font-weight:blod;">常见问题</div>
-      <div class="card-content">
-        <div class="card-content-inner" style="padding:0 15px;">
-		<p style="color:#EF7C00;margin:0;font-weight:blod;">1、怎样成为个性化定制用户？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">您可以通过点击叮当到家官网、APP、微信公众号等途径，通过定制全年服务，成为叮当到家个性化定制用户；也可以拨打客服热线010-56429112，我们会上门为您办理。</p>
+<div class="pages navbar-through toolbar-through">
+    <div data-page="faq" class="page">
+        <div id="indexPageContentDiv" class="page-content">
+            <div class="beijing-index">
+                <div class="card-header" style="font-size:22px;font-weight:blod;background:#fff;color:#EF7C00;">常见问题
+                </div>
+                <div class="card-content">
+                    <div class="card-content-inner abouts1">
+                        <p class="special-color6">1、怎样成为个性化定制用户？</p>
+                        <p>您可以通过点击叮当到家官网、APP、微信公众号等途径，通过定制全年服务，成为叮当到家个性化定制用户；也可以拨打客服热线010-56429112，我们会上门为您办理。</p>
+                    </div>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">2、叮当到家的服务人员如何呢？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">叮当到家平台上的服务人员都经过非常严格的实名认证、背景调查、资料备案。面试环节层层筛选，5%择优录取，专业培训后上岗。叮当到家平台拥有强大的培训队伍，确保服务人员的服务技能、服务态度、服务礼仪的高标准。</p>
+                    <div class="card-content-inner abouts1">
+                        <p class="special-color6">2、叮当到家的服务人员如何呢？</p>
+                        <p>
+                            叮当到家平台上的服务人员都经过非常严格的实名认证、背景调查、资料备案。面试环节层层筛选，5%择优录取，专业培训后上岗。叮当到家平台拥有强大的培训队伍，确保服务人员的服务技能、服务态度、服务礼仪的高标准。</p>
+                    </div>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">3、叮当到家的服务需要用户提供工具吗？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">您好，我们的服务人员会携带对应服务所需工具，实现高品质服务。</p>
+                    <div class="card-content-inner abouts1">
+                        <p class="special-color6">3、叮当到家的服务需要用户提供工具吗？</p>
+                        <p>您好，我们的服务人员会携带对应服务所需工具，实现高品质服务。</p>
+                    </div>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">4、厨房/卫生间保养包含家电清洗吗？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">您好，厨房/卫生间保养是针对厨房/卫生间内固定设施（储物柜、家用电器）表面深度清洁和保养服务，不包含家电清洗。推荐您搭配使用叮当到家家电清洗服务，效果显著。</p>
+                    <div class="card-content-inner abouts1">
+                        <p class="special-color6">4、厨房/卫生间保养包含家电清洗吗？</p>
+                        <p>您好，厨房/卫生间保养是针对厨房/卫生间内固定设施（储物柜、家用电器）表面深度清洁和保养服务，不包含家电清洗。推荐您搭配使用叮当到家家电清洗服务，效果显著。</p>
+                    </div>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">5、我家面积比较大，如果超出服务时间，怎么收费呢？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">叮当到家的日常保洁是按次收费，每次3小时。如果时间超出，按50元/小时收取（不足1小时按1小时收取）。</p>
+                    <div class="card-content-inner abouts1">
+                        <p class="special-color6">5、我家面积比较大，如果超出服务时间，怎么收费呢？</p>
+                        <p>叮当到家的日常保洁是按次收费，每次3小时。如果时间超出，按50元/小时收取（不足1小时按1小时收取）。</p>
+                    </div>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">6、叮当到家的阿姨培训吗？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">叮当到家的阿姨入职前会有一系列的培训，并通过考核才能上岗，日常还有质检对阿姨进行监督，以保证阿姨的服务质量。</p>
+                    <div class="card-content-inner abouts1">
+                        <p class="special-color6">6、叮当到家的阿姨培训吗？</p>
+                        <p>叮当到家的阿姨入职前会有一系列的培训，并通过考核才能上岗，日常还有质检对阿姨进行监督，以保证阿姨的服务质量。</p>
+                    </div>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">7、叮当到家的阿姨能代买清洁剂吗？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">能代买，需要您下单时在备注里写明。</p>
+                    <div class="card-content-inner abouts1">
+                        <p class="special-color6">7、叮当到家的阿姨能代买清洁剂吗？</p>
+                        <p>能代买，需要您下单时在备注里写明。</p>
+                    </div>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">8、叮当到家的阿姨能清洗油烟机吗？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">阿姨可以擦油烟机表面，但内部清洗需要专业技能和专业工具，叮当到家也提供专业的油烟机清洗服务，需要您电话预约。预约热线010-56429112</p>
+                    <div class="card-content-inner abouts1">
+                        <p class="special-color6">8、叮当到家的阿姨能清洗油烟机吗？</p>
+                        <p>阿姨可以擦油烟机表面，但内部清洗需要专业技能和专业工具，叮当到家也提供专业的油烟机清洗服务，需要您电话预约。预约热线010-56429112</p>
+                    </div>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">9、叮当到家有什么优惠活动吗？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">有，您可以关注叮当到家的官方微信和APP，优惠活动会时常推送哦！</p>
+                    <div class="card-content-inner abouts1">
+                        <p class="special-color6">9、叮当到家有什么优惠活动吗？</p>
+                        <p>有，您可以关注叮当到家的官方微信和APP，优惠活动会时常推送哦！</p>
+                    </div>
 
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">10、服务后，发现家里的现金丢失，平台要如何处理？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">在阿姨离开前，您要检查家里的贵重物品/现金是否完好。阿姨离开后，如发现家中现金丢失，可第一时间报警，平台将积极协助您处理此事。</p>
-
-   <!--  <p style="color:#EF7C00;margin:0;font-weight:blod;">服务人员在服务时意外受伤了怎么办？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">我们为叮当到家平台服务人员购买了人身意外伤害保险，如果服务人员在服务的过程中意外受伤（如摔倒、划伤等），必须及时通知保险公司（或通知叮当到家），并立即报案，叮当到家平台会协调保险公司做好理赔工作。如果未及时通知致使保险事故的性质、原因、损失程序等难以确定的，保险公司对难以确定的部分，不承担赔偿责任。</p>
-
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">服务人员在服务时意外损坏了客户物品怎么办？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">我们为在叮当到家平台预约服务的客户购买了财产险，如果服务人员在服务的过程中意外损坏了客户的物品，必须及时通知保险公司（或通知叮当到家），并立即报案，叮当到家平台会协调保险公司做好理赔工作。如果未及时通知致使保险事故的性质、原因、损失程序等难以确定的，保险公司对难以确定的部分，不承担赔偿责任。</p>
-
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">家庭家政服务怎么计费？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">家庭保洁30元/小时，两小时起步，如需服务人员提供消耗品，每小时加收5元，不足两小时按两小时收费。</p>
-
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">预约服务后要更改或取消怎么办？</p>
-      <p style="border-bottom:1px solid #999;margin:0;">如果需要更改或取消服务，请务必与我们的工作人员联系。注：取消订单请在规定服务时间前两小时内进行，否则会扣除当次的服务费。</p>
-
-    <p style="color:#EF7C00;margin:0;font-weight:blod;">叮当到家都提供哪些服务？</p>
-      <p style="margin:0;">1、基础家政：制作家庭餐、保洁、洗衣熨烫、衣橱整理、管理家庭服务员。</p>
-      <p style="margin:0;">2、贴心家事：照顾老人、接送孩子、婴幼儿看护、家庭教育、营养配餐、招待访客、每日账务记录、家庭安保。</p>
-      <p style="margin:0;">3、跑腿：排队、购买机票、接机接站、同城速寄、交通违章、车辆过户年检车险、房产过户办证、社保公积金、出国签证。</p>
-      <p style="margin:0;">4、陪伴：陪跑、陪聊、陪同就医、陪同购物、旅游陪护。</p>
-      <p style="margin:0;">5、代办：代采购、代送礼、代道歉、宠物代管代养。</p>
-      <p style="margin:0;">6、代管商户服务：开锁、基础维修、挂号、深度保洁、月嫂育儿嫂、按摩、汽车租赁、婚庆、摄影、度假村、私人教练。</p>
-      <p style="margin:0;">7、生活技能普及：智能手机使用、实用讲座。</p>
-      <p style="margin:0;">8、生活方案设计+服务：出行策划、筹备宴请。</p>
-      <p style="margin:0;">9、生活信息查询。</p> -->
+                    <div class="card-content-inner abouts1">
+                        <p class="special-color6">10、服务后，发现家里的现金丢失，平台要如何处理？</p>
+                        <p>现金是否完好。阿姨离开后，如发现家中现金丢失，可第一时间报警，平台将积极协助您处理此事。</p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="card-footer"></div>
-    </div>
     </div>
 </div>
-
-
-
