-- 金牌保洁下单流程（剩余支付未完成）

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -220,7 +220,8 @@
 	<script type="text/javascript"  src="js/order/shendubaojie/order-view-1.js"></script>  
 	
 	
-	<!-- 支付成功 -->	
+	<!-- 支付 -->	
+	<script type="text/javascript" src="js/order/order-pay.js"></script>
 	<script type="text/javascript" src="js/order/order-pay-success.js"></script>
 
 	<!-- 用户版，当前订单列表 -->
@@ -229,7 +230,7 @@
 	<script type="text/javascript" src="js/order/order-hour-now-list.js"></script>
 
 	<!-- 用户兑换优惠券 -->
-	<script type="text/javascript"  src="js/user/mine-coupon-list.js"></script>  
+	<script type="text/javascript"  src="js/user/user-coupons.js"></script>  
 	<!-- 用户充值列表 -->
 	<script type="text/javascript"  src="js/user/mine-charge-list.js"></script>  
 	<script type="text/javascript"  src="js/user/mine-charge-way.js"></script>  
