--- a/jhj-web-user/order/order-hour-choose.html
+++ b/jhj-web-user/order/order-hour-choose.html
@@ -13,7 +13,7 @@
 							<li>
 								<img src="img/rili/zuobiao.png" alt="">
 							</li>
-							<a href="user/mine-addr-list.html" class="item-link" id="addrSelect">
+							<a href="user/mine-addr-list.html" class="special-color7" id="addrSelect">
 								<li style="width: 60%;">
 									<div style="width: 30%; height: 60px; float: left;">地址：</div>
 									<label id="orderChooseAddrName" class="tarea1"></label>
@@ -24,7 +24,7 @@
 							</li>
 						</ul>
 					</div>
-					<a href="#" id="chooseServiceTime" class="item-link">
+					<a href="#" id="chooseServiceTime" class="special-color7">
 						<ul class="order-pay">
 							<li>选择上门服务时间</li>
 						</ul>
