--- a/jhj-web-user/html/order-pay.html
+++ b/jhj-web-user/html/order-pay.html
@@ -38,7 +38,7 @@
 								<li>支付方式</li>
 							</ul>
 							<div class="order-xiadan">
-								<ul class="xiadan11">
+								<ul id="select-restpay" class="xiadan11">
 									<li><img src="../img/dingdan-pay/yue-pay.png" alt=""></li>
 									<li class="order-pay2">
 										<p>余额支付</p>
@@ -48,13 +48,13 @@
 									<li style="width:30%;"><img src="../img/dingdan-pay/dingdan-pay2.png" alt=""></li>
 								</ul>
 
-								<ul class="xiadan11">
+								<ul id="select-wxpay" class="xiadan11">
 									<li><img src="../img/dingdan-pay/weixin-pay.png" alt=""></li>
 									<li>微信支付</li>
 									<li><img src="../img/dingdan-pay/dingdan-pay1.png" alt=""></li>
 								</ul>
 
-								<ul class="xiadan11" style="border:0;">
+								<ul id="select-alipay" class="xiadan11" style="border:0;">
 									<li><img src="../img/dingdan-pay/zhifubao-pay.png" alt=""></li>
 									<li>支付宝支付</li>
 									<li><img src="../img/dingdan-pay/dingdan-pay1.png" alt=""></li>
