--- a/jhj-web-user/order/order-pay-success.html
+++ b/jhj-web-user/order/order-pay-success.html
@@ -1,18 +1,28 @@
 
-<div class="pages">
-	<!-- Page, data-page contains page name-->
-	<div data-page="order-pay-success-page" class="page"style="background:#FDEEEE;">
-		<!-- Scrollable page content-->
-		<div class="page-content">
-
-			<div class="ddjg-input" style="text-align:center">
-                <img src="img/icons/duigou-x.png" />
-            </div>
-            <ul class="ddjg-xq">
-            	<li id="blackContent">订单支付成功</li>
-            	<li id="grayContent">我们正在为您安排家庭助理</li>
-          </ul>
-			<a href="#" id="order-pay-success-btn" class="button active my-submit">查看订单</a>
+<div class="pages navbar-through toolbar-through">
+	<div data-page="order-pay-success" class="page">
+		<div id="indexPageContentDiv" class="page-content">
+			<div class="beijing-index">
+				<div class="order-pay-success">
+					<img src="img/order-pay-success/pay-success.png" alt="">
+					<p>您的订单已经支付成功</p>
+					<p class="all-button1">查看订单</p>
+				</div>
+				<div class="order-pay-success" style="margin-top: 20px; padding: 0;">
+					<ul class="order-pay-success1">
+						<li class="special-color5">看看还需要以下服务吗？</li>
+						<li style="height: 60px;">
+							<div class="order-pay-success1-1">
+								<span>清洗油烟机</span>
+								<span>空调清洗</span>
+								<span>洗衣机清洗</span>
+								<span>擦玻璃</span>
+							</div>
+						</li>
+						<li class="special-color4">联系客服</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
