---订单日历页面选择时间

--- a/jhj-web-user/html/order-pay-rili.html
+++ b/jhj-web-user/html/order-pay-rili.html
@@ -65,8 +65,9 @@
 							<ul class="order-pay">
 								<li>选择上门服务时间</li>
 							</ul>
-							<ul class="order-pay-success1" style="background:#fff;">
-								<a href="order-pay-rili-kongjian.html"><li class="special-color3">2016年9月26日</li></a>
+							<ul class="chose-time" style="background:#fff;">
+								<li class="special-color3"><a href="order-pay-rili-kongjian.html" class="special-color3">2016年9月26日</a></li>
+								<li><img src="../img/rili/zuobiao1.png" alt=""></li>
 							</ul>
 							<a href="order-xiadan.html"><div class="all-button2">确定</div></a>
 						</div>
