--- a/jhj-web-user/html/order-pay-rili.html
+++ b/jhj-web-user/html/order-pay-rili.html
@@ -66,7 +66,7 @@
 								<li>选择上门服务时间</li>
 							</ul>
 							<ul class="chose-time" style="background:#fff;">
-								<li class="special-color3"><a href="order-pay-rili-kongjian.html" class="special-color3">2016年9月26日</a></li>
+								<li class="special-color3"></li>
 								<li><img src="../img/rili/zuobiao1.png" alt=""></li>
 							</ul>
 							<a href="order-xiadan.html"><div class="all-button2">确定</div></a>
