--- a/jhj-web-user/order/order-hour-choose.html
+++ b/jhj-web-user/order/order-hour-choose.html
@@ -24,12 +24,16 @@
 							</li>
 						</ul>
 					</div>
-					<a href="#" id="chooseServiceTime" class="special-color7">
-						<ul class="order-pay">
-							<li>选择上门服务时间</li>
-						</ul>
-					</a>
 					
+					<ul class="order-pay">
+						<li>选择上门服务时间</li>
+					</ul>
+					<a href="#" id="chooseServiceTime" class="special-color7">
+					<ul class="chose-time" style="background:#fff;">
+						<li class="special-color3"></li>
+						<li><img src="img/rili/zuobiao1.png" alt=""></li>
+					</ul>
+					</a>
 				</div>
 			</form>
 		</div>
