-- 修正订单支付流程

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -184,12 +184,13 @@
 	<!-- 时间戳类库 -->
 	<script type="text/javascript" src="js/lib/moment-with-locales.min.js"></script>
 
-	<!-- Path to your app js-->
+	<!-- 公共类库-->
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/login.js"></script>
 	<script type="text/javascript" src="js/require-data.js"></script>
 	<script type="text/javascript" src="js/utils.js"></script>
-	
+	<script type="text/javascript" src="js/order/order-utils.js"></script>
+	<!-- 首页-->
 	<script type="text/javascript" src="js/index.js"></script>
 	
 	<!--我的信息  -->
