--- a/jhj-web-user/order/order-pay-success.html
+++ b/jhj-web-user/order/order-pay-success.html
@@ -6,7 +6,7 @@
 				<div class="order-pay-success">
 					<img src="img/order-pay-success/pay-success.png" alt="">
 					<p>您的订单已经支付成功</p>
-					<p class="all-button1">查看订单</p>
+					<p class="all-button1"><a href="order/order-list.html">查看订单</a></p>
 				</div>
 				<div class="order-pay-success" style="margin-top: 20px; padding: 0;">
 					<ul class="order-pay-success1">
