--- a/jhj-web-user/user/mine-add-addr.html
+++ b/jhj-web-user/user/mine-add-addr.html
@@ -17,9 +17,9 @@
                     <div id="mine-addr-save" class="all-button9">确认</div>
                 </form>
             </div>
-            <div id="content-wrap" id="autocomplete-result-list">
-                <div id="addr-auto-list" class="list-block media-list">
-                    <ul style="margin-top: -120px;">
+            <div>
+                <div id="addr-auto-list">
+                    <ul>
 
                     </ul>
                 </div>
