-- 订单支付成功页面完成

--- a/jhj-web-user/order/order-pay-success.html
+++ b/jhj-web-user/order/order-pay-success.html
@@ -6,17 +6,14 @@
 				<div class="order-pay-success">
 					<img src="img/order-pay-success/pay-success.png" alt="">
 					<p>您的订单已经支付成功</p>
-					<p class="all-button1"><a href="order/order-list.html">查看订单</a></p>
+					<p class="all-button1"><a href="order/order-list.html" class="special-color7">查看订单</a></p>
 				</div>
 				<div class="order-pay-success" style="margin-top: 20px; padding: 0;">
 					<ul class="order-pay-success1">
 						<li class="special-color5">看看还需要以下服务吗？</li>
 						<li style="height: 60px;">
-							<div class="order-pay-success1-1">
-								<span>清洗油烟机</span>
-								<span>空调清洗</span>
-								<span>洗衣机清洗</span>
-								<span>擦玻璃</span>
+							<div class="order-pay-success1-1" id="recoList">
+
 							</div>
 						</li>
 						<li class="special-color4">联系客服</li>
