--- a/jhj-web-user/order/order-list.html
+++ b/jhj-web-user/order/order-list.html
@@ -1,62 +1,62 @@
 
-<!-- We don't need full layout here, because this page will be parsed with Ajax-->
-<!-- Top Navbar-->
-
-
-<div class="pages">
-	<!-- Page, data-page contains page name-->
-	<div data-page="order-jingpai-page" class="page"style="overflow:auto;background:#E5E5E5;">
-		<!-- Scrollable page content-->
-		<div class="page-content"style="margin:0;height:882px;">
-			<div class="neirong">
-				<img src="img/icons/richangjiashi1.png" alt="">
-				<span>日常家事</span>
-				<div class="jieshao">为您提供日常保洁,做饭,洗衣等家政服务按小时收取费用</div>
-			</div>
-			<div class="neirong">
-				<img src="img/icons/yingji1.png" alt="">
-				<span>应急</span>
-				<div class="jieshao">客厅、卫生间、厨房、开荒、擦玻璃等更加专业的保洁服务，根据服务项目收费</div>
-			</div>
-			<div class="neirong">
-				<img src="img/icons/paotui1.png" alt="">
-				<span>跑腿</span>
-				<div class="jieshao">客厅、卫生间、厨房、开荒、擦玻璃等更加专业的保洁服务，根据服务项目收费</div>
-			</div>
-			<div class="neirong">
-				<img src="img/icons/peiban1.png" alt="">
-				<span>陪伴</span>
-				<div class="jieshao">客厅、卫生间、厨房、开荒、擦玻璃等更加专业的保洁服务，根据服务项目收费</div>
-			</div>
-			<div class="neirong">
-				<img src="img/icons/lianjie1.png" alt="">
-				<span>其他</span>
-				<div class="jieshao">客厅、卫生间、厨房、开荒、擦玻璃等更加专业的保洁服务，根据服务项目收费</div>
+<div class="pages navbar-through toolbar-through">
+	<div data-page="order-list" class="page">
+		<div id="indexPageContentDiv" class="page-content">
+			<div class="beijing-index">
+				<div class="dingdan-mokuai">
+					<p>订单明细</p>
+					<div class="order-dingdan">
+						<ul class="dingdan">
+							<li>订购项目：</li>
+							<li>金牌保洁</li>
+						</ul>
+						<ul class="dingdan">
+							<li>订单状态：</li>
+							<li>已完成</li>
+						</ul>
+						<ul class="dingdan">
+							<li>服务时间：</li>
+							<li>2016-9-22&nbsp;星期五&nbsp;9:00</li>
+						</ul>
+						<ul class="dingdan">
+							<li>上门地址：</li>
+							<li>北京市海淀区汉荣家园2号楼</li>
+						</ul>
+						<ul class="dingdan">
+							<li>订单金额：</li>
+							<li>129元</li>
+						</ul>
+						<div class="all-button3">补交差价</div>
+						<div class="all-button4">联系客服</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
-		
-<div id="order-list-part" style="display:none">
-	<li class="order-item" data-id="{id}"><a class="item-link"
-		href="order/order-view.html?user_id={user_id}&order_no={order_no}">
-			<div class="item-content">
-				<div class="item-media">
-					<!-- <img width="44" src="img/cats/2.png"> -->
-				</div>
-				<div class="item-inner">
-					<div class="item-title-row">
-						<div class="item-title">{service_type_name}</div>
-					</div>
-					<div class="item-subtitle">下单时间:{add_time}</div>
-				</div>
-			</div>
-	</a></li>
-</div>		
-		
-		
+<div id="order-list-part" style="display: none">
+	<div class="order-dingdan">
+		<ul class="dingdan">
+			<li>订购项目：</li>
+			<li>{serviceTypename}</li>
+		</ul>
+		<ul class="dingdan">
+			<li>订单状态：</li>
+			<li>{orderStatusStr}</li>
+		</ul>
+		<ul class="dingdan">
+			<li>服务时间：</li>
+			<li>{serviceDateStr}</li>
+		</ul>
+		<ul class="dingdan">
+			<li>上门地址：</li>
+			<li>{addrName}</li>
+		</ul>
+		<ul class="dingdan">
+			<li>订单金额：</li>
+			<li>{orderPayStr}</li>
+		</ul>
+		<div class="all-button3">补交差价</div>
+		<div class="all-button4">联系客服</div>
 	</div>
 </div>
-
-
-
