---地址页面修改

--- a/jhj-web-user/html/mine-addr-list.html
+++ b/jhj-web-user/html/mine-addr-list.html
@@ -26,9 +26,11 @@
 					<div id="indexPageContentDiv" class="page-content">
 						
 						<div class="beijing-index">
-							<ul class="addr-dizhi">
-								<li>北京市海淀区知春路北</li>
-							</ul>
+							<div class="addr-dizhi-big">
+								<ul class="addr-dizhi">
+									<li>北京市海淀区知春路北</li>
+								</ul>
+							</div>
 							<div class="all-button9">添加一个地址</div>
 							
 						</div>
