--- a/jhj-web-user/user/mine-addr-list.html
+++ b/jhj-web-user/user/mine-addr-list.html
@@ -1,19 +1,21 @@
 <div class="pages navbar-through toolbar-through">
     <div data-page="mine-addr-list" class="page">
         <div id="indexPageContentDiv" class="page-content">
-        {{#each data}}
             <div class="beijing-index">
-                <ul class="addr-dizhi" onclick="clickToSetDefault(this,{{id}})">
-                    <li id="mine-add-addr-link">{{#js_compare "this.is_default === 1"}}[默认]{{/js_compare}}
-                        {{name}} {{addr}}
-                    </li>
-                    <li>
-	                	<input type="hidden" id="addr_id" name="addr_id" value="{{id}}"   />
-                    </li>
-                </ul>
+            	<div class="addr-dizhi-big">
+            	{{#each data}}
+	                <ul class="addr-dizhi" onclick="clickToSetDefault(this,{{id}})" style="padding:0">
+	                    <li id="mine-add-addr-link">{{#js_compare "this.is_default === 1"}}[默认]{{/js_compare}}
+	                        {{name}} {{addr}}
+	                    </li>
+	                    <li>
+		                	<input type="hidden" id="addr_id" name="addr_id" value="{{id}}"   />
+	                    </li>
+	                </ul>
+	                {{/each}}
+                </div>
                 <div class="all-button9" id="mine-add-addr">添加一个地址</div>
             </div>
-        {{/each}}
         </div>
     </div>
 </div>
