---修改我的中的联系客服

--- a/jhj-web-user/user/mine.html
+++ b/jhj-web-user/user/mine.html
@@ -49,9 +49,11 @@
 								<li>〉</li>
 							</ul>
 							<ul style="border:0;">
-								<li><img src="img/order-my/my-9.png" alt=""></li>
-								<li>联系客服</li>
-								<li>〉</li>
+								<a href="tel:010-56429112">
+									<li><img src="img/order-my/my-9.png" alt=""></li>
+									<li>联系客服</li>
+									<li>〉</li>
+								</a>
 							</ul>
 							<div class="all-button5" id="user-logout">退出当前账号</div>
 						</div>
