----修改充值样式

--- a/jhj-web-user/user/charge/mine-charge-list.html
+++ b/jhj-web-user/user/charge/mine-charge-list.html
@@ -2,9 +2,8 @@
 <!-- Top Navbar-->
 <div class="pages">
 	<!-- Page, data-page contains page name-->
-	<div data-page="mine-charge-list" class="page"style="background:#FDEEEE;">
+	<div data-page="mine-charge-list" class="page"style="background:#EFF2F9;">
 		<div class="page-content"style="margin-top:5px;height:auto;">
-		<!-- 1f -->
 			<img src="img/minecharge1.jpg" style="width:100%;margin-top:10px;" alt="">
 			<div class="list-block chongzhi-qingchu"style="margin:25px auto;color:#999;">
                 {{#each data}}
