--- a/jhj-web-user/user/charge/mine-charge-way.html
+++ b/jhj-web-user/user/charge/mine-charge-way.html
@@ -1,6 +1,6 @@
 
 <div class="pages">
-	<div data-page="mine-charge-way" class="page navbar-fixed" style="background-color: #FDEEEE!important;">
+	<div data-page="mine-charge-way" class="page navbar-fixed" style="background-color: #EFF2F9;">
 		<div class="page-content" style="margin: 0; color: #999;">
 			<span class="fangshiwenzi">信息核对</span>
 			<form id="order-view" class="list-block" style="margin: 0 auto!important;">
