-- 深度保洁服务介绍页面

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -46,7 +46,7 @@
 							</div>
 
 							<div class="mincircle mincircle2">
-								<a href="#" onclick="orderLink('order/fiveservice/cook.html', 24)">
+								<a href="order/order-deep-index.html"">
 									<div class="mincircle-one">
 										<p>深度养护</p>
 										<p>开荒，擦玻璃</p>
@@ -214,11 +214,6 @@
 	<script type="text/javascript" src="js/order/order-hour-confirm.js"></script>
 	<script type="text/javascript" src="js/order/order-view-0.js"></script>
 	
-	<!-- 深度保洁附加服务选择 -->
-	<script type="text/javascript"  src="js/order/shendubaojie/order-list-shendubaojiezl.js"></script>  
-	<script type="text/javascript"  src="js/order/shendubaojie/order-list-shendubaojie-yuyue.js"></script>  
-	<script type="text/javascript"  src="js/order/shendubaojie/order-list-shendubaojie-result.js"></script>  
-	<script type="text/javascript"  src="js/order/shendubaojie/order-view-1.js"></script>  
 	
 	<!-- 支付 -->	
 	<script type="text/javascript" src="js/order/order-pay.js"></script>
