--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -214,15 +214,17 @@
 	<script type="text/javascript" src="js/order/order-hour-confirm.js"></script>
 	<script type="text/javascript" src="js/order/order-view-0.js"></script>
 	
+	<!-- 订单 -->
+	<script type="text/javascript" src="js/order/order-list.js"></script>
 	
 	<!-- 支付 -->	
 	<script type="text/javascript" src="js/order/order-pay.js"></script>
 	<script type="text/javascript" src="js/order/order-pay-success.js"></script>
 
-	<!-- 用户版，当前订单列表 -->
-	<script type="text/javascript" src="js/order/order-cal.js"></script>
-	<!-- 用户版，当前订单列表 -->
-	<script type="text/javascript" src="js/order/order-hour-now-list.js"></script>
+	
+	
+
+
 
 	<!-- 用户兑换优惠券 -->
 	<script type="text/javascript"  src="js/user/user-coupons.js"></script>  
