--- a/jhj-web-user/order/order-list.html
+++ b/jhj-web-user/order/order-list.html
@@ -10,7 +10,7 @@
 		<div id="order-list-part" style="display: none">
 			<div class="dingdan-mokuai">
 				<p>订单明细</p>
-				<a href="#" onclick="orderView({orderType}, '{orderNo}',)" class="special-color7">
+				<a href="#" onclick="orderView({orderType}, '{orderNo}')" class="special-color7">
 					<div class="order-dingdan">
 						<ul class="dingdan">
 							<li>订购项目：</li>
@@ -32,7 +32,8 @@
 							<li>订单金额：</li>
 							<li>{orderPayStr}</li>
 						</ul>
-						<div class="all-button3" style="dispaly: {priceExtendStyle">补交差价</div>
+						<div class="all-button10" style="display: {doOrderPayStyle}" onclick="doOrderPay({orderType}, '{orderNo}')">去支付</div>
+						<div class="all-button3" style="display: {priceExtendStyle}">补交差价</div>
 						<div class="all-button4">联系客服</div>
 					</div>
 			</div>
